--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     
-    <H1>Minha Página</H1>
+    <button type="button" onclick="clicou()">"Clique aqui"</button>
+    <p id="Agradecer" onclick="redirecionar()"> </p>
+    <p id="Trocar" onmouseover="redirecionar()">"Passe o mouse aqui."</p>
 
 </body>
 </html>
